update projects, disable scrollbutton on mobile, fixed black box scroll bug

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,16 @@
+/* 
+---------------------------------------------------------------------------------------------------
+? PARALLAX BACKGROUND 
+---------------------------------------------------------------------------------------------------
+*/
+
 .background,
 .foreground {
     position: absolute;
     height: 100%;
-    object-fit: cover;
     /* object-position: center; */
     max-width: 100vw;
-    /* min-width: 100vw; */
+    min-width: 100vw;
     z-index: -1;
 }
 
@@ -13,19 +18,27 @@
     transform: translateZ(-9px) scale(2);
     width: 100%;
     max-width: 100vw;
+    /* object-fit: cover;; */
 }
 
 .foreground {
     transform: translateZ(-5px) scale(1.5);
     width: 100%;
     /* max-width: 60vw; */
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 body {
     overflow-y: hidden;
     overflow-x: hidden;
 }
+
+
+/* 
+---------------------------------------------------------------------------------------------------
+? SCROLLBAR 
+---------------------------------------------------------------------------------------------------
+*/
 
 ::-webkit-scrollbar {
     -webkit-appearance: none;
@@ -38,6 +51,7 @@ body {
     overflow-x: hidden;
     perspective: 10px;
     margin-bottom: 5em;
+    background-color: transparent;
 }
 
 * {
@@ -49,7 +63,8 @@ body {
 /* Chrome, Edge, and Safari */
 
 *::-webkit-scrollbar {
-    width: 6px;
+    width: 2px !important;
+    background: black;
 }
 
 *::-webkit-scrollbar-track {
@@ -57,7 +72,7 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #fdf5ff;
+    background-color: grey !important;
     border-radius: 10px;
     border: 4px none #ff0000;
 }
@@ -100,25 +115,12 @@ header {
     font-size: 5em;
     text-shadow: 0 0 5px black;
     font-family: "Quicksand", sans-serif;
-    /* background-image: url(https://img.freepik.com/premium-photo/abstract-luxury-blur-grey-color-gradient-used-as-background-studio-wall-display-your-products_1258-54652.jpg?w=2000); */
     background-clip: text;
     color: white;
     margin-bottom: -1em;
     filter: blur(10px);
     transform: rotatex(180deg) translatey(45px) !important;
 }
-
-.mask> :last-child {
-    /* transform: rotatex(180deg) translatey(1em) !important; */
-    /* filter: drop-shadow(6px 4px 2px black) blur(1px); */
-}
-
-
-/* .mask > * {
-  background-image: url(https://images.unsplash.com/photo-1556200892-4ef0e6b6887b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
-  background-clip: text;
-  color: transparent;
-} */
 
 mask {
     width: max-content;
@@ -139,14 +141,17 @@ mask {
 
 .name-title_scroll-icon {
     cursor: pointer;
-    /* -webkit-animation-name: bounce1; */
-    /* animation-name: bounce1; */
-    /* -webkit-animation-duration: 2s; */
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+
+@media only screen and (max-width: 450px) {
+    .name-title_scroll-button {
+        display: none;
+    }
 }
 
 .about_skills-overlay {
@@ -160,7 +165,7 @@ mask {
 }
 
 .about_skills-container {
-    /* padding-top: 10em; */
+    padding-top: 5em;
     margin-top: 10em;
     display: flex;
     flex-direction: row;
