--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,53 +1,54 @@
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.2rem;
-  margin: 0 0.5em;
-  border-radius: 0em 0em 1em 1em;
-  background-color: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(10px);
-  color: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* right:0; */
-  z-index: 10;
-  box-shadow: 0.4em 0.4em 0.9em black;
-  font-family: "Quicksand", sans-serif;
-  /* width: fit-content; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.2rem;
+    margin: 0 0.5em;
+    border-radius: 0em 0em 1em 1em;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* right:0; */
+    z-index: 10;
+    box-shadow: 0.4em 0.4em 0.9em black;
+    font-family: "Quicksand", sans-serif;
+    /* width: fit-content; */
+    margin-right: 10em;
 }
 
 nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul li {
-  margin: 0 1rem;
+    margin: 0 1rem;
 }
 
 nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2rem;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 @media only screen and (max-width: 450px) {
-  nav {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    max-width: 100vw;
-    /* background-color: pink; */
-    /* border: solid rgba(255, 255, 255, 0.5); */
-    border-width: 0 0px 0.1em 0px;
-  }
+    nav {
+        margin: 0;
+        padding: 0;
+        width: 98%;
+        max-width: 100vw;
+        /* background-color: pink; */
+        border: solid rgba(255, 255, 255, 0.5);
+        border-width: 0 0px 0.1em 0px;
+    }
 }
